TMM task manager, trailer downloads, ...

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -59,7 +59,7 @@ tmm.trailer=Trailer
 tmm.subtitles=Subtitles
 tmm.update.title=check for update
 tmm.update.message=A new update has been found.\nDo you want to update?
-tmm.registerdonator=Register to donator version
+tmm.registerdonator=Register for donator version
 tmm.registerdonator.error=There was a problem registering your version
 tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
 tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating.
