started with the renamer preview

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -93,6 +93,7 @@ movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use
 movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking this result
 movie.remove=Remove selected movie(s)
 movie.rename=Rename/cleanup selected movie(s)
+movie.renamerpreview=Renamer preview
 movie.updatemediainfo=Update media information of selected movie(s)
 movie.bulkedit=Bulk editing
 movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
