add Donator to about dialog

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -59,6 +59,7 @@ tmm.trailer=Trailer
 tmm.subtitles=Subtitles
 tmm.update.title=check for update
 tmm.update.message=A new update has been found.\nDo you want to update?
+tmm.registeredto=Registered to:
 tmm.registerdonator=Register for donator version
 tmm.registerdonator.error=There was a problem registering your version
 tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
