--- a/src/messages.properties
+++ b/src/messages.properties
@@ -215,6 +215,7 @@ Settings.images=Images
 Settings.tvshow=TV Shows
 Settings.general=General
 Settings.externaldevices=External devices
+Settings.filetypes=File types
 
 # general settings
 Settings.proxy=Proxy Settings
