finished renamer dry run

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -12,6 +12,7 @@ Button.save=Save
 Button.scrape=Scrape
 Button.edit=Edit
 Button.register=Register
+Button.rename=Rename
 
 menuitem.cut=Cut
 menuitem.copy=Copy
@@ -94,6 +95,8 @@ movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use
 movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking this result
 movie.remove=Remove selected movie(s)
 movie.rename=Rename/cleanup selected movie(s)
+movie.renamepreview=Rename/cleanup selected movie(s) - dry run
+movie.renamepreview.hint=Create a preview, which movies have to be renamed
 movie.renamerpreview=Renamer preview
 movie.updatemediainfo=Update media information of selected movie(s)
 movie.bulkedit=Bulk editing
@@ -111,7 +114,6 @@ movie.edit.moveactorup=Move selected actor up
 movie.edit.moveactordown=Move selected actor down
 movie.edit.moveproducerup=Move selected producer up
 movie.edit.moveproducerdown=Move selected producer down
-
 
 movie.inmovieset=Movies in a movieset
 movie.notinmovieset=Movies not in a movieset
@@ -132,6 +134,11 @@ movieset.movie.remove=Remove marked movie from movieset
 movieset.movie.moveup=Move marked movie up
 movieset.movie.movedown=Move marked movie down
 movieset.save.desc=Save movie set metadata
+
+renamer.oldfolder=Old folder name
+renamer.newfolder=New folder name
+renamer.oldfiles=Old file names
+renamer.newfiles=New file names
 
 cast.actor.add=Add a new Actor
 cast.actor.remove=Remove selected Actor
